Mon Mar  9 14:55:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (default gems): installs default gemspecs.

Mon Mar  9 14:48:08 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): simplified. see [ruby-core:22725]

Mon Mar  9 14:33:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb: prints names of the directories where files are
	  installed to.

Mon Mar  9 02:25:54 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_proc.rb: add some tests.

Mon Mar  9 01:38:00 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_enum.rb: add some tests.

Mon Mar  9 01:12:37 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_object.rb: add a test for Object#method_missing.

Mon Mar  9 01:11:17 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: add tests for File#size and
	  File.absolute_path.

Sun Mar  8 23:02:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (LDFLAGS): always prepends -link.

Sun Mar  8 11:39:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): dirty hack to compute multiple
	  sizeof, for apple's universal binary.

Sat Mar  7 22:06:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (universal_binary): checks if sizes are same on all
	  architectures.

Sat Mar  7 18:45:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: checks if cd really succeeded.

Sat Mar  7 14:24:47 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: don't use CONFIG_SHELL for testing shell feature in
	  Makefile.

Sat Mar  7 14:07:31 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: fix the location of cdcmd.

Sat Mar  7 13:52:01 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: the shell which runs configure may be different from
	  the shell for make.  configure likes bash but Makefile specifies
	  SHELL=/bin/sh.

Sat Mar  7 12:31:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
