@@ -1,3 +1,7 @@
+Mon Mar  9 15:19:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* instruby.rb (manpages): use basename to compare and for Tempfile.
+
 Mon Mar  9 14:55:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* instruby.rb (default gems): installs default gemspecs.
